--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AuthorizationService
 server.port=9993
 app.datasource.driverClassName=com.mysql.jdbc.Driver
-app.datasource.url=jdbc:mysql://localhost:3306/neargrocery
+app.datasource.url=jdbc:mysql://mysql:3306/neargrocery
 app.datasource.username=root
 app.datasource.password=
 
