--- a/yamls/dev/configmap.yaml
+++ b/yamls/dev/configmap.yaml
@@ -7,7 +7,7 @@ items:
   metadata:
     creationTimestamp: 2019-10-30T10:47:47Z
     name: mysql-config
-    namespace: neargrocery-development
+    namespace: dev
     resourceVersion: "42526"
     selfLink: /api/v1/namespaces/neargrocery-development/configmaps/mysql-config
     uid: b62889b0-fb02-11e9-9500-0800275fc834
