--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,6 +44,11 @@ node {
         sh("sed -i.bak 's#192.168.99.100:5000/authorization-service:v1.4#${imageTag}#' ./yamls/dev/*.yaml")
         //sh("kubectl --namespace=${env.BRANCH_NAME} apply -f yamls/services/")
         sh("kubectl --namespace=${env.BRANCH_NAME} apply -f yamls/dev/")
+        kubernetesDeploy(
+                    kubeconfigId: 'kubeconfig',
+                    configs: 'yamls/dev/*.yaml',
+                    enableConfigSubstitution: true
+                )
         echo 'To access your environment run `kubectl proxy`'
         echo "Then access your service via http://localhost:8001/api/v1/proxy/namespaces/${env.BRANCH_NAME}/services/${feSvcName}:80/"
   }
