--- a/yamls/dev/deployment.yaml
+++ b/yamls/dev/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: authorization-v1-0-container
-        image: 192.168.99.100:5000/authorization-service:v1.4
+        image: 192.168.99.100:5000/neargrocery/authorization-service:dev.49
         env:
         - name: MYSQL_HOST
           valueFrom:
