--- a/helm/authentication-chart/templates/configmap.yaml
+++ b/helm/authentication-chart/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 items:
 - apiVersion: v1
   data:
-    MYSQL_HOST: 192.168.99.100
+    MYSQL_HOST: mysql-service
   kind: ConfigMap
   metadata:
     creationTimestamp: 2019-10-30T10:47:47Z
