--- a/helm/persistent-volume-mysql.yaml
+++ b/helm/persistent-volume-mysql.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mysql-persistent-volume
-  namespace: neargrocery-development
+  namespace: insurance-development
   labels:
     type: local
 spec:
