--- a/helm/mysql-chart/templates/persistent-volume-claim.yaml
+++ b/helm/mysql-chart/templates/persistent-volume-claim.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
-  namespace: neargrocery-development
+  namespace: insurance-development
 spec:
   storageClassName: manual
   accessModes:
