--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag=gcr.io/$PROJECT_ID/authorization-service:$TAG_NAME', '.']
-images: ['gcr.io/$PROJECT_ID/authorization-service:$TAG_NAME']
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/authorization-service:$BUILD_ID', '.']
+images: ['gcr.io/$PROJECT_ID/authorization-service:$BUILD_ID']
 
