--- a/helm/authentication-chart/templates/deployment.yaml
+++ b/helm/authentication-chart/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: authorization-v1-0-container
-        image: "${trigger['tag']}"
+        image: "${trigger.artifacts[0].reference}"
         env:
         - name: MYSQL_HOST
           valueFrom:
